<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="main">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="empty_list">Список пуст</string>
    <string name="empty_string" />

    <string name="team">Команда</string>
    <string name="filter">Настройки фильтрации</string>
    <string name="vacancies_search">Поиск вакансий</string>

    <string name="vacancy">Вакансия</string>
    <string name="salary_from">от</string>
    <string name="salary_to">до</string>
    <string name="no_salary">зарплата не указана</string>
    <string name="experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contacts_name">Контактное лицо</string>
    <string name="contacts_email">E-mail</string>
    <string name="contacts_phone">Телефон</string>
    <string name="contacts_comment">Комментарий</string>

    <string name="industry_title">Выбор отрасли</string>
    <string name="industry_search_hint">Введите отрасль</string>
    <string name="industry_not_found">Такой отрасли нет</string>

    <string name="country_title">Выбор страны</string>
    <string name="country_search_hint">Введите страну</string>
    <string name="country_not_found">Такой страны нет</string>

    <string name="region_title">Выбор региона</string>
    <string name="region_search_hint">Введите регион</string>
    <string name="region_not_found">Такого региона нет</string>

    <string name="list_error">Не удалось получить\nсписок</string>
    <string name="select">Выбрать</string>

    <string name="toast_error">Произошла ошибка</string>
    <string name="toast_not_connection">Проверьте подключение к интернету</string>

    <string name="tools_vacancy_description">
        <b>Обязанности</b>\n
        \t• Разрабатывать новую функциональность\n
        \t• Помогать с интеграцией\n
        \t• Проектировать большие новые модули\n
        \t• Писать UI- и unit-тесты\n
        \t• Следить за работоспособностью сервиса
    </string>

    <string name="tools_skills">
        \t• Знание классических алгоритмов\n
        \t• Программирование для Android больше года\n
        \t• Знание WebRTC
    </string>

    <string name="team_title">Над приложением работали</string>
    <string name="team_list">Михаил Павлов\nНиколай Михайлов\nПетр Ткаченко\nАлексей Муренков</string>
    
    <string name="main_search_hint">Введите запрос</string>
    <string name="bad_connection">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="no_vacancies">Не удалось получить\nсписок вакансий</string>
    <string name="not_find_vacancies">Таких вакансий нет</string>
    <string name="reset">Сбросить</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="place_work">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="place_of_work_selection">Выбор места работы</string>
    <string name="apply">Применить</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="country_selection">Выбор страны</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="check_interner_connection">Проверьте подключение к интернету</string>
</resources>
