<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fragment"
    tools:context=".ui.team.TeamFragment">

    <TextView
        style="@style/text_top_bar"
        android:text="@string/team" />

    <TextView
        style="@style/text_bold_32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dimen_16"
        android:paddingVertical="@dimen/dimen_8"
        android:text="@string/team_title" />

    <TextView
        style="@style/text_medium_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/dimen_16"
        android:paddingHorizontal="@dimen/dimen_16"
        android:paddingVertical="@dimen/dimen_24"
        android:text="@string/team_list" />
</LinearLayout>
