<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fragment"
    tools:context=".ui.filter.FilterFragment">

    <TextView
        android:id="@+id/tv_filtering_settings"
        style="@style/text_top_bar"
        android:text="@string/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/place_work"
        style="@style/place_work_inputLayout"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/place_work"
        app:endIconDrawable="@drawable/arrow_forward"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filtering_settings">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_place_work"
            style="@style/place_work_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/industry"
        style="@style/place_work_inputLayout"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/industry"
        app:endIconDrawable="@drawable/arrow_forward"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_work">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_industry"
            style="@style/place_work_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/salary_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_52"
        android:layout_margin="@dimen/dimen_16"
        android:background="@drawable/vacancy_company_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/industry" />

    <TextView
        android:id="@+id/salary_capt"
        style="@style/text_regular_12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:text="@string/expected_salary"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@id/salary_val"
        app:layout_constraintEnd_toEndOf="@id/salary_container"
        app:layout_constraintStart_toStartOf="@id/salary_container"
        app:layout_constraintTop_toTopOf="@id/salary_container"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/salary_val"
        style="@style/text_regular_16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:background="?attr/colorSurface"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:paddingVertical="@dimen/dimen_4"
        app:layout_constraintBottom_toBottomOf="@id/salary_container"
        app:layout_constraintEnd_toEndOf="@id/salary_container"
        app:layout_constraintStart_toStartOf="@id/salary_container"
        app:layout_constraintTop_toBottomOf="@id/salary_capt" />

    <LinearLayout
        android:id="@+id/show_only_with_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_16dp"
        android:paddingEnd="@dimen/_0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salary_container">

        <TextView
            android:id="@+id/tv_without_salary"
            style="@style/text_regular_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/do_not_show_without_salary"
            android:textColor="?attr/colorPrimary" />

        <CheckBox
            android:id="@+id/cb_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:buttonTint="@color/Blue" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_apply"
        style="@style/text_regular_16"
        android:layout_width="@dimen/_0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_apply"
        android:clickable="true"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_reset"
        style="@style/text_regular_16"
        android:layout_width="@dimen/_0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="@color/Red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
