<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/item_vacancy_list_marginStart_16dp"
    android:background="?attr/colorSecondary"
    android:layout_marginEnd="@dimen/item_vacancy_list_marginStart_16dp"
    android:paddingVertical="9dp">

    <ImageView
        android:id="@+id/image_company"
        android:layout_width="@dimen/item_vacancy_list_width_and_height_image_company_48dp"
        android:layout_height="@dimen/item_vacancy_list_width_and_height_image_company_48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/LightGray"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:id="@+id/vacancy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_company"
        app:layout_constraintTop_toTopOf="@+id/image_company">

        <TextView
            android:id="@+id/vacancy_title"
            style="@style/text_medium_22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            tools:text="Android-разработчик, Москва" />

        <TextView
            android:id="@+id/company_title"
            style="@style/text_regular_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            tools:text="Еда" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no_salary"
                style="@style/text_regular_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_salary"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/salary_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_regular_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salary_from" />

                <TextView
                    android:id="@+id/salary_min_val"
                    style="@style/text_regular_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dimen_4"
                    android:text="@string/salary_from"
                    tools:text="100 000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/salary_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_regular_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salary_to" />

                <TextView
                    android:id="@+id/salary_max_val"
                    style="@style/text_regular_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dimen_4"
                    android:text="@string/salary_from"
                    tools:text="500 000" />
            </LinearLayout>

            <TextView
                android:id="@+id/currency"
                style="@style/text_regular_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="р" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
